@@ -1,3 +1,7 @@
+MJ 11/03/2005
+- BallExpansion is revised and now accepts parameter "stats".
+- IncrementalStats is extended with a new method to add an item k times.
+
 MJ 03/03/2005
 - GraphPrinter is extended with a new format and the possibility to save the
   undirected version of the overlay. See class docs.
